@@ -1,2 +1,5 @@
 2021-07-19
-1. add java
+1. add oracle jdk
+
+2021-07-20
+1. add openjdk
